# Sistema_de_Recomendacao_de_Filmes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  ruff.toml
.dvc/: config
data/raw/: rating.csv.dvc
docs/: MODEL_CARD.md
notebooks/: 01_importacao.ipynb  02_eda.ipynb  03_baselines.ipynb  04_treinamento.ipynb
scripts/: validate_env.py
src/recsys/: __init__.py
src/recsys/data/: __init__.py  dataset.py  download_data.py  feature_eng.py  preprocess.py
src/recsys/evaluation/: __init__.py  evaluate.py  metrics.py
src/recsys/models/: __init__.py  base.py  ncf.py  popularity.py  user_knn.py
src/recsys/preprocessing/: __init__.py  base.py  pipeline.py  strategies.py
src/recsys/training/: __init__.py  experiments.py  registry.py  train.py  trainer.py
src/recsys/utils/: __init__.py  config.py
tests/: test_factory.py  test_feature_eng.py  test_preprocessing.py  test_training.py
