[tool.poetry]
name = "recsys"
version = "0.1.0"
description = "Sistema de recomendação — Tech Challenge Fase 02"
authors = ["Raphael"]
readme = "README.md"
packages = [{include = "recsys", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = ">=2.3"
scikit-learn = ">=1.5"
mlflow = ">=2.15"
pydantic-settings = ">=2.4"
kagglehub = ">=0.3"
pandas = ">=2.2"
numpy = ">=1.26"
matplotlib = ">=3.8"
seaborn = ">=0.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = "0.15.16"
pre-commit = ">=4.0"
dvc = "^3.67.1"
nbconvert = "^7.17.1"
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
